# McUpdaterClient

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: c-cpp.yml
Source/include/: ConfigManager.h  FileHasher.h  FileSystemHelper.h  HashBasedFileSyncer.h  HttpClient.h  IncrementalUpdatePlanner.h  MinecraftUpdater.h  ProgressReporter.h  SelfUpdater.h  UpdateChecker.h  UpdateOrchestrator.h  VersionCompare.h  ZipExtractor.h
Source/src/: ConfigManager.cpp  FileHasher.cpp  FileSystemHelper.cpp  HashBasedFileSyncer.cpp  HttpClient.cpp  IncrementalUpdatePlanner.cpp  MinecraftUpdater.cpp  ProgressReporter.cpp  SelfUpdater.cpp  UpdateChecker.cpp  UpdateOrchestrator.cpp  ZipExtractor.cpp  logger.cpp  main.cpp
config/: updater.json
scripts/: install-deps.sh
